fix: sidebar text overflowing when collapsed

--- a/components/sidebar/Sidebar.module.scss
+++ b/components/sidebar/Sidebar.module.scss
@@ -20,6 +20,7 @@
 
     .text {
       position: relative;
+      visibility: visible;
       opacity: 1;
       transition: opacity 10ms ease-out 300ms;
     }
@@ -55,6 +56,7 @@
 
 .text {
   position: absolute;
+  visibility: hidden;
   opacity: 0;
   font-size: 1.4em;
   font-weight: 500;
